--- a/templates/usuario/area/subarea/subarea_form.html
+++ b/templates/usuario/area/subarea/subarea_form.html
@@ -8,9 +8,9 @@
           <div class="card">
               <div class="card-header bg-primary text-white">
                   {% if form.instance.pk %}
-                      Editar SubÁrea
+                      Editar Subárea
                   {% else %}
-                      Crear SubÁrea
+                      Crear Subárea
                   {% endif %}
               </div>
               <div class="card-body">
