--- a/templates/usuario/area/subarea/subarea_list.html
+++ b/templates/usuario/area/subarea/subarea_list.html
@@ -4,12 +4,12 @@
 <div class="container mt-4">
   <div class="row mb-3">
     <div class="col-md-6">
-        <h2>Lista de SubÁreas</h2>
+        <h2>Lista de Subárea</h2>
     </div>
     {% if perms.usuarioApp.add_subarea %}
     <div class="col-md-6 text-end">
         <a href="{% url 'subarea_crear' %}" class="btn btn-primary">
-            <i class="fas fa-plus"></i> Nueva SubÁrea
+            <i class="fas fa-plus"></i> Nueva Subárea
         </a>
     </div>
     {% endif %}
