--- a/templates/usuario/usuarios/lista_usuarios.html
+++ b/templates/usuario/usuarios/lista_usuarios.html
@@ -5,7 +5,6 @@
 
 {% block extra_css %}{% static 'css/lista_usuarios.css' %}{% endblock %}
 
-
 {% block content %}
 
 {% if messages %}
@@ -56,6 +55,7 @@
                             <th>Último Inicio de Sesión</th>
                             {% if user.is_superuser %}
                             <th>Estado</th>
+                            <th>Acciones</th>
                             {% endif %}
                         </tr>
                     </thead>
@@ -88,6 +88,15 @@
                                 <span class="badge bg-danger">Inactivo</span>
                                 {% endif %}
                             </td>
+                            <td>
+                                <div class="btn-group btn-group-sm" role="group">
+                                    {% if perms.proyectoApp.change_proyecto %}
+                                    <a href="{% url 'asignar_grupos' usuario.id %}" class="btn btn-warning">
+                                        <i class="fas fa-edit"></i>
+                                    </a>
+                                    {% endif %}
+                                </div>
+                            </td>
                             {% endif %}
                         </tr>
                         {% empty %}
@@ -100,7 +109,6 @@
             </div>
         </div>
     </div>
-
 </div>
 
 {% endblock %}
